--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "moment": "^2.29.4",
     "reset-css": "^5.0.1",
     "sass": "^1.58.0",
     "vue": "^3.2.45"
